--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^9.0.0",
+    "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/viewpager": "^4.2.2",
+    "@react-native-community/viewpager": "4.2.0",
     "expo": "^40.0.0",
     "expo-constants": "~9.3.3",
-    "expo-permissions": "~5.0.1",
+    "expo-permissions": "~10.0.0",
     "prop-types": "^15.7.2",
-    "react": "17.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
+    "react": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
@@ -31,7 +31,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "babel-preset-expo": "^5.0.0",
+    "babel-preset-expo": "8.3.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
